[Task 2] Add JS and check amenities

--- a/web_dynamic/static/styles/6-filters.css
+++ b/web_dynamic/static/styles/6-filters.css
@@ -51,6 +51,11 @@ button:hover {
     width: 25%;
 }
 
+.amenities input[type=checkbox] {
+    vertical-align: middle;
+    margin-right: 10px;
+}
+
 .popover {
     visibility: hidden;
     width: 100%;
