--- a/web_dynamic/static/styles/3-header.css
+++ b/web_dynamic/static/styles/3-header.css
@@ -1,11 +1,21 @@
 header {
-    background: white;
-    height: 70px;
-    width: 100%;
-    border-bottom: 1px solid #CCCCCC;
+	background-color: #FFFFFF;
+	background-image: url("../images/logo.png");
+	background-repeat: no-repeat;
+	background-position: 20px 50%;
+	height: 70px;
+	width: 100%;
+	border-bottom: 1px solid #CCCCCC;
 }
-header .logo {
-    background: url("../images/logo.png") no-repeat;
-    left: 20px;
-    height: 100%;
+#api_status {
+    float: right;
+    width: 40px;
+    height: 40px;
+    margin-right: 30px;
+    margin-top: 15px;
+    border-radius: 50%;
+    background-color: #CCCCCC;
+    }
+#api_status.available {
+    background-color: #FF545F;
 }
